manifest/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-dp
  labels:
    app: otus-dp
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: otus-app
          image: andrey1andrey/otus_1.6:latest
          ports:
            - containerPort: 8000
